# AI_Novel_Writer

./: .curserrules  .cursorrules  .gitignore  LICENSE  README.md  install.bat  install.sh  migrate_rename.py  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.sh  run_novel_writer.py  setup.py  test_pitch_generator_nanopunk.py  test_status_updates.py
.github/workflows/: ci.yml
docs/: SPEC.md  TECHNICAL.md
integration_tests/: pitch_test_results.json
src/novel_writer/: __init__.py  cli.py
src/novel_writer/agents/: __init__.py  base.py  base_agent.py  critic.py  critic_agent.py  facilitator_agent.py  genre_vibe.py  genre_vibe_agent.py  improver_agent.py  meeting_recorder_agent.py  pitch.py  pitch_generator_agent.py  plot_outliner_agent.py  tropemaster.py  tropemaster_agent.py  voter.py  voter_agent.py
src/novel_writer/config/: __init__.py  llm.py  logging.py  logging_config.py
src/novel_writer/data/: subgenres.json
src/novel_writer/tests/: __init__.py  test_genre_vibe_agent.py  test_idea_command.py  test_tropemaster_agent.py  test_voter_agent.py
src/novel_writer/utils/: __init__.py  file_ops.py  file_utils.py
src/novelwriter_idea/: __init__.py  cli.py
src/novelwriter_idea/agents/: __init__.py  base.py  base_agent.py  critic_agent.py  facilitator.py  facilitator_agent.py  (+8 more)
tests/: conftest.py  test_critic_agent.py  test_facilitator_agent.py  test_genre_vibe_agent.py  test_improver_agent.py  test_llm.py  test_meeting_recorder_agent.py  test_outline_generation.py  test_pitch_generator_agent.py  test_tropemaster_agent.py  test_voter_agent.py
(+11 files in other folders)
